force-app/main/default/objects/ServiceResource/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <inlineHelpText>Address to CC on Email on Assignment Notices.</inlineHelpText>
    <label>Additional Email</label>
    <type>Email</type>
</CustomField>