force-app/main/default/objects/ServiceResource/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <label>Contractor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPS</fullName>
            </value>
            <value>
                <fullName>Streamlined</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>