force-app/main/default/objects/ServiceResource/fields/Email_Language__c.field-meta.xml
<CustomField>
    <fullName>Email_Language__c</fullName>
    <label>Email Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
                <default>true</default>
                <label>EN</label>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>