force-app/main/default/objects/ServiceResource/fields/Exempt_Resource__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt Resource</label>
    <type>Checkbox</type>
</CustomField>