force-app/main/default/objects/ServiceResource/fields/Functional_Team__c.field-meta.xml
<CustomField>
    <fullName>Functional_Team__c</fullName>
    <label>Functional Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_Functional_Teams</valueSetName>
    </valueSet>
</CustomField>