force-app/main/default/objects/ServiceResource/fields/Is_1010__c.field-meta.xml
<CustomField>
    <fullName>Is_1010__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10/10 Resource</label>
    <type>Checkbox</type>
</CustomField>