force-app/main/default/objects/ServiceResource/fields/IsCD__c.field-meta.xml
<CustomField>
    <fullName>IsCD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CD</label>
    <type>Checkbox</type>
</CustomField>