force-app/main/default/objects/ServiceResource/fields/IsContractor__c.field-meta.xml
<CustomField>
    <fullName>IsContractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor</label>
    <type>Checkbox</type>
</CustomField>