force-app/main/default/objects/ServiceResource/fields/IsFWP__c.field-meta.xml
<CustomField>
    <fullName>IsFWP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flexible Work Place. In-House resources that are capable of working from home if needed.</inlineHelpText>
    <label>FWP</label>
    <type>Checkbox</type>
</CustomField>