force-app/main/default/objects/ServiceResource/fields/IsInHouse__c.field-meta.xml
<CustomField>
    <fullName>IsInHouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-House</label>
    <type>Checkbox</type>
</CustomField>