force-app/main/default/objects/ServiceResource/fields/IsWAH__c.field-meta.xml
<CustomField>
    <fullName>IsWAH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WAH</label>
    <type>Checkbox</type>
</CustomField>