force-app/main/default/objects/ServiceResource/fields/Non_Opt__c.field-meta.xml
<CustomField>
    <fullName>Non_Opt__c</fullName>
    <formula>!IsOptimizationCapable</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Opt</label>
    <type>Checkbox</type>
</CustomField>