force-app/main/default/objects/ServiceResource/fields/Outlaw__c.field-meta.xml
<CustomField>
    <fullName>Outlaw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outlaw</label>
    <type>Checkbox</type>
</CustomField>