force-app/main/default/objects/ServiceResource/fields/RecordID18__c.field-meta.xml
<CustomField>
    <fullName>RecordID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordID18</label>
    <type>Text</type>
</CustomField>