force-app/main/default/objects/ServiceResource/fields/SM_Email__c.field-meta.xml
<CustomField>
    <fullName>SM_Email__c</fullName>
    <formula>Support_Manager__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM Email</label>
    <type>Text</type>
</CustomField>