force-app/main/default/objects/ServiceResource/fields/Support_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Manager</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>