force-app/main/default/objects/ServiceResource/fields/TOR_Group__c.field-meta.xml
<CustomField>
    <fullName>TOR_Group__c</fullName>
    <label>TOR Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_TOR_Groups</valueSetName>
    </valueSet>
</CustomField>