force-app/main/default/objects/ServiceResource/fields/TZO__c.field-meta.xml
<CustomField>
    <fullName>TZO__c</fullName>
    <formula>User__r.UTC_Offset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TZO</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>